fix: 小程序坑点记录

--- a/小程序坑点记录.md
+++ b/小程序坑点记录.md
@@ -15,4 +15,4 @@ ios上可以尝试使用 custome-cache="{{false}}"
 audio组件callback不要设置多次 否则就会回调多次      
 
 ## 域名绑定   
-当测试时没有在微信后台进行后台测试 真机第一次可能会请求不到数据    
+当测试时没有在微信后台进行后台进行设置  真机第一次可能会请求不到数据    
