add：关于互动作业抓取.md

--- a/关于自动化探究.md
+++ b/关于自动化探究.md
@@ -19,7 +19,7 @@
 - 查     
 
 ## 库管理
-**到现在基本任何一种编程语言都有其各其的库管理工具**			
+**到现在基本任何一种编程语言都有其各自的库管理工具**			
 - iOS中pod				
 - android中的gradle   				  
 - nodejs中的npm   		 
