--- a/关于互动作业抓包.md
+++ b/关于互动作业抓包.md
@@ -55,18 +55,18 @@ m = 1
 
 由于现在只需要下载答案详细部分。恰好互动作业中有一个下载答案的按钮。       
 肯定是存到了某个地方。直接用安装xpose文件监控模块找到了对应目录。        
-接下来就是模拟整个过程：       
+接下来就是模拟整个过程：具代查看: [详细代码](hdzy/autojs/common.js)         
 搜索书名-下载-重命名-传到电脑        
 利用autojs自动化工具以及MuMu模拟器的共享文件夹功能完整的下载了答案图片         
 
 - 问题1    
 下载有重复的图片 一般是1、2两张      
-这个去除就行   
+这个去除就行 具代查看: [详细代码](hdzy/autojs/rnpic.js)    
 
 - 问题2       
 搜索限制：后台后来加了100本搜索限制             
 一次只下载100本就行               
-然后利用自动卸载安装登录脚本 重新下载就行                
+然后利用自动卸载安装登录脚本 重新下载就行具代查看: [详细代码](hdzy/autojs/login.js)                 
 
 至此：互动作业数据基本能自动化入库           
 
