fix：关于互动作业抓取.md

--- a/关于互动作业抓包.md
+++ b/关于互动作业抓包.md
@@ -10,9 +10,9 @@
 ## 目标分析    
 一般来讲首先肯定是浏览目标的网站和app。    
 对于非会员服务来讲：网站的抓取要比app容易很多    
-对于会员服务来讲：app要比网站有更多的可能性     
-通过使用网站和app。非会员形式。非接口形式。    
-
+对于会员服务来讲：app要比网站有更多的可能性  
+通过使用网站。分析出网站提供 非会员形式。非接口形式。    
+通过app初步抓包  https+pining    
 
 ## 抓取网页   
 问题就转化为如何抓取网页。    
