fix：关于互动作业抓取.md

--- a/关于互动作业抓包.md
+++ b/关于互动作业抓包.md
@@ -16,7 +16,7 @@
 
 ## 抓取网页   
 问题就转化为如何抓取网页。    
-抓取网页就很简单了。查看[互动作业数据抓取](js/hdzj.js)    
+抓取网页就很简单了。查看[互动作业数据抓取](js/hdzy.js)    
 然而问题还没有完。    
 
 - 问题1         
