fix：关于互动作业抓取.md

--- a/关于互动作业抓包.md
+++ b/关于互动作业抓包.md
@@ -50,7 +50,7 @@ m = 1
 目标返回数据的详细数据也进行了加密处理。由于dump不是很完整     
 加密算法很难破解【暂罢】    
 但是索性找到了【图片上有超时处理】的代码     
-图片校验可破解： 查看[互动作业数据抓取](js/hdzj.js)     
+图片校验可破解： 查看[互动作业数据抓取](express/hdbook.js)     
 
 ### 自动化模拟   
 具代查看: [详细代码](hdzy/autojs/)   
