fix：关于互动作业抓取.md

--- a/关于互动作业抓包.md
+++ b/关于互动作业抓包.md
@@ -12,7 +12,7 @@
 对于非会员服务来讲：网站的抓取要比app容易很多    
 对于会员服务来讲：app要比网站有更多的可能性  
 通过使用网站。分析出网站提供 非会员形式。非接口形式。    
-通过app初步抓包  https+pining    
+通过app初步抓包  https+pinning   
 
 ## 抓取网页   
 问题就转化为如何抓取网页。    
@@ -45,7 +45,7 @@ m = 1
 在模拟器dump出dex可惜不完整 但是对整个分析还是很有帮助的         
 
 ### 抓包
-通过分析 目标app采有https+pining           
+通过分析 目标app采有https+pinning           
 可通过在模拟器安装xpose+justtrustme进行抓包       
 目标返回数据的详细数据也进行了加密处理。由于dump不是很完整     
 加密算法很难破解【暂罢】    
