--- a/关于源码阅读.md
+++ b/关于源码阅读.md
@@ -5,13 +5,13 @@
 如果说我们有一个软件的源码，我们如何其理解它的本质呢。<br/>
 
 - 准备<br/>
-  **利用源码运行这个项目**方便调试、添加日志等操作。
-  **领域相关知识**
-  **基础知识的积累**基础原理 语言的api用法、用途
+  **利用源码运行这个项目**方便调试、添加日志等操作。<br/>
+  **领域相关知识**<br/>
+  **基础知识的积累**基础原理 语言的api用法、用途<br/>
 
 - 使用其软件的功能<br/>  
 
-	**功能xxx**:是如何实现的？
-			 1. 自己思考一下如何实现
-			 2. 带着这个问题去找答案
-			 3. 在头脑梳理流程，大体上理解，细节上深入 即看树木也要看到森林
+	**功能xxx**:是如何实现的？<br/>
+			 1. 自己思考一下如何实现<br/>
+			 2. 带着这个问题去找答案<br/>
+			 3. 在头脑梳理流程，大体上理解，细节上深入 即看树木也要看到森林<br/>
